tests/baselines/reference/interfacedeclWithPredicatesError4.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesError4.ts(6,15): error TS1005: 'String, Number, Boolean or Object type as right side' expected.


==== tests/cases/compiler/interfacedeclWithPredicatesError4.ts (1 errors) ====
    
    interface UsersShow{
        user_id?: number;
        screen_name?: string;
        text?: string;
    } constrains {
                  
        type(bla) == 5;
    ~~~~~~~~~~~~~~~~~~
!!! error TS1005: 'String, Number, Boolean or Object type as right side' expected.
    }